--- a/tai-lieu/index.html
+++ b/tai-lieu/index.html
@@ -100,7 +100,6 @@
         <div class="document__previous-link">
             <i class="home-icon fas fa-home"></i>
             <i class="right-icon fas fa-chevron-right"></i>
-            <i class="fas fa-book"></i>
             <span>Tài liệu</span>
         </div>
         <main id="document">
@@ -118,7 +117,7 @@
                     <div class="document__category">
                         <h4 class="document__category-title">Sắp xếp theo</h4>
                         <ul class="document__category-list">
-                            <li class="document__category-item">
+                            <ol class="document__category-item">
                                 <a href="">1. Trình độ JLPT</a>
                                 <ul class="document__category-item-list">
                                     <li class="document__category-item-details"><a href="">JLPT N1</a></li>
@@ -126,8 +125,8 @@
                                     <li class="document__category-item-details"><a href="">JLPT N3</a></li>
                                     <li class="document__category-item-details"><a href="">JLPT N4-5</a></li>
                                 </ul>
-                            </li>
-                            <li class="document__category-item">
+                            </ol>
+                            <ol class="document__category-item">
                                 <a href="">2. Kỹ năng</a>
                                 <ul class="document__category-item-list">
                                     <li class="document__category-item-details"><a href="">Kanji</a></li>
@@ -136,8 +135,8 @@
                                     <li class="document__category-item-details"><a href="">Đọc hiểu</a></li>
                                     <li class="document__category-item-details"><a href="">Nghe hiểu</a></li>
                                 </ul>
-                            </li>
-                            <li class="document__category-item">
+                            </ol>
+                            <ol class="document__category-item">
                                 <a href="">3. Tên sách</a>
                                 <ul class="document__category-item-list">
                                     <li class="document__category-item-details"><a href="">Sách A</a></li>
@@ -147,7 +146,7 @@
                                     <li class="document__category-item-details"><a href="">Sách E</a></li>
                                     <li class="document__category-item-details"><a href="">Sách F</a></li>
                                 </ul>
-                            </li>
+                            </ol>
                         </ul>
                     </div>
                 </div>
@@ -155,57 +154,65 @@
                     <div class="book-list">
                         <h3 class="book-list__title">Tài liệu theo trình độ JLPT</h3>
                         <div class="row">
-                            <div class="l-4 m-4 c-12">
-                                <div class="book-list__item">
-                                    <h5 class="book-list__item-title">JLPT N1</h5>
-                                </div>
+                            <div class="l-4 m-6 c-12">
+                                <a href="">
+                                    <div class="book-list__item jlpt-n1">
+                                        <h5 class="book-list__item-title">JLPT N1</h5>
+                                    </div>
+                                </a>
                             </div>
-                            <div class="l-4 m-4 c-12">
-                                <div class="book-list__item">
-                                    <h5 class="book-list__item-title">JLPT N2</h5>
-                                </div>
+                            <div class="l-4 m-6 c-12">
+                                <a href="">
+                                    <div class="book-list__item jlpt-n2">
+                                        <h5 class="book-list__item-title">JLPT N2</h5>
+                                    </div>
+                                </a>
                             </div>
-                            <div class="l-4 m-4 c-12">
-                                <div class="book-list__item">
-                                    <h5 class="book-list__item-title">JLPT N3</h5>
-                                </div>
+                            <div class="l-4 m-6 c-12">
+                                <a href="">
+                                    <div class="book-list__item jlpt-n3">
+                                        <h5 class="book-list__item-title">JLPT N3</h5>
+                                    </div>
+                                </a>
                             </div>
-                            <div class="l-4 m-4 c-12">
-                                <div class="book-list__item">
-                                    <h5 class="book-list__item-title">JLPT N4-5</h5>
-                                </div>
+                            <div class="l-4 m-6 c-12">
+                                <a href="">
+                                    <div class="book-list__item jlpt-n4-5">
+                                        <h5 class="book-list__item-title">JLPT N4-5</h5>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
                     <div class="book-list">
                         <h3 class="book-list__title">Tài liệu theo kỹ năng</h3>
                         <div class="row">
-                            <div class="l-4 m-4 c-12">
+                            <div class="l-4 m-6 c-12">
                                 <div class="book-list__item">
                                     <h5 class="book-list__item-title">KANJI</h5>
                                 </div>
                             </div>
-                            <div class="l-4 m-4 c-12">
+                            <div class="l-4 m-6 c-12">
                                 <div class="book-list__item">
                                     <h5 class="book-list__item-title">TỪ VỰNG</h5>
                                 </div>
                             </div>
-                            <div class="l-4 m-4 c-12">
+                            <div class="l-4 m-6 c-12">
                                 <div class="book-list__item">
                                     <h5 class="book-list__item-title">NGỮ PHÁP</h5>
                                 </div>
                             </div>
-                            <div class="l-4 m-4 c-12">
+                            <div class="l-4 m-6 c-12">
                                 <div class="book-list__item">
                                     <h5 class="book-list__item-title">ĐỌC HIỂU</h5>
                                 </div>
                             </div>
-                            <div class="l-4 m-4 c-12">
+                            <div class="l-4 m-6 c-12">
                                 <div class="book-list__item">
                                     <h5 class="book-list__item-title">NGHE HIỂU</h5>
                                 </div>
                             </div>
-                            <div class="l-4 m-4 c-12">
+                            <div class="l-4 m-6 c-12">
                                 <div class="book-list__item">
                                     <h5 class="book-list__item-title">PHÁT ÂM</h5>
                                 </div>
@@ -214,22 +221,22 @@
                         <div class="book-list">
                             <h3 class="book-list__title">Tài liệu theo tên sách</h3>
                             <div class="row">
-                                <div class="l-4 m-4 c-12">
+                                <div class="l-4 m-6 c-12">
                                     <div class="book-list__item">
                                         <h5 class="book-list__item-title">SÁCH A</h5>
                                     </div>
                                 </div>
-                                <div class="l-4 m-4 c-12">
+                                <div class="l-4 m-6 c-12">
                                     <div class="book-list__item">
                                         <h5 class="book-list__item-title">SÁCH A</h5>
                                     </div>
                                 </div>
-                                <div class="l-4 m-4 c-12">
+                                <div class="l-4 m-6 c-12">
                                     <div class="book-list__item">
                                         <h5 class="book-list__item-title">SÁCH A</h5>
                                     </div>
                                 </div>
-                                <div class="l-4 m-4 c-12">
+                                <div class="l-4 m-6 c-12">
                                     <div class="book-list__item">
                                         <h5 class="book-list__item-title">SÁCH A</h5>
                                     </div>
