Update Margin Paddgin Page Tai-lieu

--- a/tai-lieu/index.html
+++ b/tai-lieu/index.html
@@ -99,7 +99,7 @@
     <div class="grid wide">
         <div class="document__previous-link">
             <i class="home-icon fas fa-home"></i>
-            <i class="right-icon fas fa-chevron-right"></i>
+            <i class="right-icon fas fa-caret-right"></i>
             <span>Tài liệu</span>
         </div>
         <main id="document">
